Cambios Log/Reg y Términos y Condiciones

--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <img src="img/Bucar_Logo.png" width="150">
+        <img src="img/logopontic.png" width="200px">
     </header>
     <form class="formulario">
         <h1>Ingresa</h1>
