--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:wght@100&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="Log.css">
+    <link rel="stylesheet" href="css/Log.css">
     <title>PonTicLog</title>
 </head>
 
