--- a/TyC.html
+++ b/TyC.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TyC_PonTic</title>
-    <link rel="stylesheet" href="Tyc.css">
+    <link rel="stylesheet" href="css/Tyc.css">
 </head>
 
 <body>
